--- a/src/Components/Slider/Slider.css
+++ b/src/Components/Slider/Slider.css
@@ -1,14 +1,10 @@
 .slider__container{
-    background-color: brown;
-    width: 100%;
-}
-.slide{
-    width: 100%;
+    background-color: white
     
-  
 }
-img {
-    max-width:100%;
-    max-height:100%;
-    object-fit:cover;
+
+.slide img{
+    width: 100%;
+    height: auto;
+  
 }
