--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,9 +1,17 @@
+.header {
+  background-color: white;  
+position: fixed;  
+top: 0;  
+z-index: 100;  
+width: 100%;  
+}
 .container {
     width: auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     flex-flow: row wrap;
+    
 }
 .logo{
   display: flex;
