--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* roboto-100 - latin_cyrillic */
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 100;
+    src: url('../assets/fonts/roboto-v30-latin_cyrillic-100.eot'); /* IE9 Compat Modes */
+    src: local(''),
+    url('../assets/fonts/roboto-v30-latin_cyrillic-100.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-100.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-100.woff') format('woff'), /* Modern Browsers */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-100.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-100.svg#Roboto') format('svg'); /* Legacy iOS */
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* roboto-300 - latin_cyrillic */
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    src: url('../assets/fonts/roboto-v30-latin_cyrillic-300.eot'); /* IE9 Compat Modes */
+    src: local(''),
+    url('../assets/fonts/roboto-v30-latin_cyrillic-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-300.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-300.woff') format('woff'), /* Modern Browsers */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-300.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-300.svg#Roboto') format('svg'); /* Legacy iOS */
+}
+/* roboto-regular - latin_cyrillic */
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../assets/fonts/roboto-v30-latin_cyrillic-regular.eot'); /* IE9 Compat Modes */
+    src: local(''),
+    url('../assets/fonts/roboto-v30-latin_cyrillic-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-regular.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-regular.woff') format('woff'), /* Modern Browsers */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+}
+/* roboto-500 - latin_cyrillic */
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    src: url('../assets/fonts/roboto-v30-latin_cyrillic-500.eot'); /* IE9 Compat Modes */
+    src: local(''),
+    url('../assets/fonts/roboto-v30-latin_cyrillic-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-500.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-500.woff') format('woff'), /* Modern Browsers */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-500.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-500.svg#Roboto') format('svg'); /* Legacy iOS */
+}
+/* roboto-900 - latin_cyrillic */
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 900;
+    src: url('../assets/fonts/roboto-v30-latin_cyrillic-900.eot'); /* IE9 Compat Modes */
+    src: local(''),
+    url('../assets/fonts/roboto-v30-latin_cyrillic-900.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-900.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-900.woff') format('woff'), /* Modern Browsers */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-900.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../assets/fonts/roboto-v30-latin_cyrillic-900.svg#Roboto') format('svg'); /* Legacy iOS */
+}
+body {
+    margin: 0;
+    font-family: Roboto, sans-serif;
 }
