--- a/src/Components/About_us/About_us.scss
+++ b/src/Components/About_us/About_us.scss
@@ -2,16 +2,34 @@
 
 .about {
   @include containerWidthDesktop;
-  color: black;
-  padding: 10px;
-  text-align: center;
-  margin-top: 50px;
+ 
+  // color: black;
+  // padding: 10px;
+  // text-align: center;
+  // margin-top: 50px;
+  // display: flex;
+  // justify-content: center;
+  // flex-direction: initial;
+  // flex-wrap: wrap;
+}
+.about h2 {
+  border-bottom: 2px solid #00509d;
+}
+
+.tariff {
+  width: 80%; 
   display: flex;
-  justify-content: center;
-  flex-direction: initial;
+  justify-content: space-around;
+  border-style: outset;
+  margin: 10px auto;
   flex-wrap: wrap;
+
 }
-.about img {
-  width: 150px;
-  margin: 30px;
+
+@media all and (max-width: 550px) {
+.tariff{
+  flex-direction: column;
 }
+  
+}
+
